@@ -5,8 +5,10 @@ hyperkitty (1.3.3-1) unstable; urgency=medium
     - Update (build-)dependencies
     - Bump standards-version to 4.5.1
   * d/tests/control: Update test dependencies
+  * d/rules: Replace all glyphicons-halflings-regular font files with symlinks
+    to the files from package fonts-glyphicons-halflings
 
- -- Jonas Meurer <jonas@freesources.org>  Tue, 12 Jan 2021 00:05:52 +0100
+ -- Jonas Meurer <jonas@freesources.org>  Tue, 12 Jan 2021 00:08:47 +0100
 
 hyperkitty (1.3.2-1.1) unstable; urgency=medium
 
